# protocol

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  note-id-refactor-commits.md  rust-toolchain.toml
.ai/skills/masm-comments/: SKILL.md
.ai/skills/masm-doc-comments/: SKILL.md
.ai/skills/masm-padding/: SKILL.md
.claude/: CLAUDE.md  lessons.md  settings.json
.claude/agents/: changelog-manager.md  ci-monitor.md  code-reviewer.md  security-reviewer.md
.claude/commands/: codify-lesson.md
.claude/hooks/: post-pr-create-changelog.sh  post-pr-create-ci-monitor.sh  pre-commit-lint.sh  pre-pr-draft.sh  pre-push-review.sh  pre-push-test.sh
.github/actions/workspace-release/: action.yml
.github/workflows/: bench.yml  build-docs.yml  build.yml  claude-ci-autofix.yml  claude-pr-triage.yml  claude.yml  lint.yml  test.yml  workspace-dry-run.yml  workspace-publish.yml
crates/miden-agglayer/: Cargo.toml  SPEC.md  build.rs
crates/miden-agglayer/asm/bridge/: agglayer_faucet.masm  asset_conversion.masm  bridge_config.masm  bridge_in.masm  bridge_out.masm  canonical_zeros.masm  crypto_utils.masm  eth_address.masm  local_exit_tree.masm  mmr_frontier32_keccak.masm  utils.masm
crates/miden-agglayer/asm/components/: bridge.masm  faucet.masm
crates/miden-agglayer/asm/note_scripts/: B2AGG.masm  CLAIM.masm  CONFIG_AGG_BRIDGE.masm  DEREGISTER_AGG_BRIDGE.masm  REMOVE_GER.masm  UPDATE_GER.masm  b2agg.masm  claim.masm  config_agg_bridge.masm  emergency_pause.masm  emergency_pause_agg_bridge.masm  update_ger.masm
crates/miden-agglayer/solidity-compat/: foundry.toml
crates/miden-agglayer/solidity-compat/test/: BridgeAssetTestVectors.t.sol  ClaimAssetTestVectors.t.sol  ClaimAssetTestVectorsLocalTx.t.sol  ClaimAssetTestVectorsMainnetTx.t.sol  ClaimAssetTestVectorsRealTx.t.sol  ClaimAssetTestVectorsRollupTx.t.sol  ClaimedGlobalIndexHashChainVectors.t.sol  ExitRoots.t.sol  LeafValueTestVectors.t.sol  MMRTestVectors.t.sol  MTFTestVectors.t.sol  SMTMerkleProofVectors.t.sol
crates/miden-agglayer/solidity-compat/test-vectors/: bridge_asset_vectors.json  claim_asset_vectors.json  claim_asset_vectors_local_tx.json  claim_asset_vectors_real_tx.json  claim_asset_vectors_rollup_tx.json  claimed_global_index_hash_chain.json  merkle_proof_vectors.json  merkle_tree_frontier_vectors.json  mmr_frontier_vectors.json
crates/miden-agglayer/src/: b2agg_note.rs  bridge.rs  bridge_out.rs  claim_note.rs  config_note.rs  deregister_note.rs  emergency_pause_note.rs  faucet.rs  lib.rs  remove_ger_note.rs  update_ger_note.rs  utils.rs
crates/miden-agglayer/src/errors/: agglayer.rs  mod.rs
crates/miden-agglayer/src/eth_types/: address.rs  amount.rs  eth_account_id_format.rs  eth_address.rs  eth_address_format.rs  eth_embedded_account_id.rs  global_index.rs  metadata_hash.rs  mod.rs
crates/miden-agglayer/src/testing/: mod.rs
crates/miden-block-prover/: Cargo.toml
crates/miden-protocol/: Cargo.toml  README.md  build.rs  masm_doc_comment_fmt.md
crates/miden-protocol-macros/: Cargo.toml
crates/miden-protocol-macros/tests/: integration_test.rs
crates/miden-protocol/asm/protocol/: active_account.masm  active_note.masm  asset.masm  faucet.masm  input_note.masm  kernel_proc_offsets.masm  native_account.masm  note.masm  output_note.masm  tx.masm
crates/miden-protocol/asm/shared_modules/: account_id.masm  type_aliases.masm  types.masm
crates/miden-protocol/benches/: account_seed.rs
crates/miden-protocol/src/: constants.rs  from_num.rs  lib.rs  protocol.rs
crates/miden-protocol/src/account/: access.rs  auth.rs  file.rs  header.rs  mod.rs  partial.rs
crates/miden-protocol/src/address/: address_id.rs  interface.rs  mod.rs  routing_parameters.rs  type.rs
crates/miden-protocol/src/asset/: asset_amount.rs  asset_callbacks.rs  asset_callbacks_flag.rs  fungible.rs  mod.rs  nonfungible.rs  role_symbol.rs  short_capital_string.rs  symbol.rs  token_symbol.rs
crates/miden-protocol/src/batch/: account_update.rs  batch_id.rs  input_output_note_tracker.rs  mod.rs  note_tree.rs  ordered_batches.rs  proposed_batch.rs  proven_batch.rs
crates/miden-protocol/src/block/: account_update_witness.rs  block_body.rs  block_inputs.rs  block_number.rs  block_proof.rs  blockchain.rs  header.rs  mod.rs  note_tree.rs  proposed_block.rs  proven_block.rs  signed_block.rs  signer.rs
crates/miden-protocol/src/errors/: masm_error.rs  mod.rs  protocol.rs  tx_kernel.rs
crates/miden-protocol/src/note/: assets.rs  attachment.rs  details.rs  file.rs  header.rs  inputs.rs  location.rs  metadata.rs  mod.rs  note_details_commitment.rs  note_id.rs  note_tag.rs  note_type.rs  nullifier.rs  partial.rs  recipient.rs  script.rs  storage.rs
crates/miden-protocol/tests/: test_accountid_prefix_endianness.rs
crates/miden-standards/: Cargo.toml  README.md  build.rs
crates/miden-standards/src/: auth_method.rs  auth_scheme.rs  lib.rs  standards_lib.rs
crates/miden-testing/: Cargo.toml
crates/miden-testing/src/: executor.rs  lib.rs  mock_host.rs  utils.rs
crates/miden-testing/tests/: lib.rs  metadata.rs
crates/miden-tx/: Cargo.toml
crates/miden-tx-batch-prover/: Cargo.toml
crates/miden-tx-batch-prover/src/: local_batch_prover.rs
crates/miden-tx/src/: lib.rs
crates/miden-tx/src/auth/: mod.rs  tx_authenticator.rs
crates/miden-tx/src/errors/: mod.rs
crates/miden-tx/src/executor/: data_store.rs  exec_host.rs  mod.rs  notes_checker.rs
crates/miden-tx/src/host/: account_delta_tracker.rs  account_procedures.rs  core_lib_overrides.rs  kernel_process.rs  link_map.rs  mod.rs  note_builder.rs  script_mast_forest_store.rs  storage_delta_tracker.rs  tx_event.rs  tx_progress.rs
crates/miden-tx/src/prover/: mast_store.rs  mod.rs  prover_host.rs
docs/: docusaurus.config.ts
docs/src/: asset.md  index.md  note.md  protocol_library.md  transaction.md
docs/src/account/: components.md  faucets.md  index.md  vault.md
docs/src/protocol/: index.md
docs/src/standards/: _category_.yml  index.md
plans/: agglayer-bridge-audit.md
scripts/: check-features.sh  generate-package.rs
tasks/: pr-summary.md
(+495 files in other folders)
