[workspace]
members = [
  "bin/bench-note-checker",
  "bin/bench-transaction",
  "crates/miden-block-prover",
  "crates/miden-protocol",
  "crates/miden-protocol-macros",
  "crates/miden-standards",
  "crates/miden-testing",
  "crates/miden-tx",
  "crates/miden-tx-batch-prover",
]
resolver = "3"

[workspace.package]
authors      = ["Miden contributors"]
edition      = "2024"
exclude      = [".github/"]
homepage     = "https://miden.xyz"
license      = "MIT"
repository   = "https://github.com/0xMiden/miden-base"
rust-version = "1.90"
version      = "0.13.0"

[profile.release]
codegen-units = 1
lto           = true

[profile.test-dev]
inherits  = "dev"
opt-level = 1

[profile.bench]
codegen-units = 1
lto           = true

[workspace.dependencies]
# Workspace crates
miden-block-prover    = { default-features = false, path = "crates/miden-block-prover", version = "0.13" }
miden-protocol        = { default-features = false, path = "crates/miden-protocol", version = "0.13" }
miden-protocol-macros = { default-features = false, path = "crates/miden-protocol-macros", version = "0.13" }
miden-standards       = { default-features = false, path = "crates/miden-standards", version = "0.13" }
miden-testing         = { default-features = false, path = "crates/miden-testing", version = "0.13" }
miden-tx              = { default-features = false, path = "crates/miden-tx", version = "0.13" }
miden-tx-batch-prover = { default-features = false, path = "crates/miden-tx-batch-prover", version = "0.13" }

# Miden dependencies
miden-air             = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-assembly        = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-assembly-syntax = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-core            = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-core-lib        = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-crypto          = { default-features = false, version = "0.22" }
miden-mast-package    = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-processor       = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-prover          = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-utils-sync      = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }
miden-verifier        = { branch = "next", default-features = false, git = "https://github.com/0xMiden/miden-vm" }

# External dependencies
anyhow         = { default-features = false, features = ["backtrace", "std"], version = "1.0" }
assert_matches = { default-features = false, version = "1.5" }
rand           = { default-features = false, version = "0.9" }
rand_chacha    = { default-features = false, version = "0.9" }
rstest         = { version = "0.26" }
thiserror      = { default-features = false, version = "2.0" }
tokio          = { default-features = false, features = ["sync"], version = "1" }
