[package]
authors.workspace      = true
categories             = ["development-tools::procedural-macro-helpers"]
description            = "Procedural macros for Miden protocol"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["macros", "miden", "protocol"]
license.workspace      = true
name                   = "miden-protocol-macros"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote       = "1.0"
syn         = { features = ["extra-traits", "full"], version = "2.0" }

[dev-dependencies]
miden-protocol = { path = "../miden-protocol" }

[package.metadata.cargo-machete]
ignored = ["proc-macro2"]
