[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Miden blockchain transaction batch executor and prover"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["batch", "miden", "prover"]
license.workspace      = true
name                   = "miden-tx-batch-prover"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
bench = false

[features]
default = ["std"]
std     = ["miden-protocol/std", "miden-tx/std"]
# miden-air/testing provides ExecutionProof::new_dummy()
testing = ["miden-protocol/testing", "miden-air/testing"]

[dependencies]
miden-protocol = { workspace = true }
miden-tx       = { workspace = true }

# Only needed for ExecutionProof::new_dummy() in testing mode
miden-air = { workspace = true, optional = true }
