[package]
authors.workspace      = true
categories             = ["no-std"]
description            = "Miden blockchain transaction executor and prover"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "transaction"]
license.workspace      = true
name                   = "miden-tx"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[features]
concurrent = ["miden-prover/concurrent", "std"]
default = ["std"]
std = [
  "miden-air/std",
  "miden-processor/std",
  "miden-protocol/std",
  "miden-prover/std",
  "miden-standards/std",
  "miden-verifier/std",
]
testing = ["miden-processor/testing", "miden-protocol/testing", "miden-standards/testing"]

[dependencies]
# Workspace dependencies
miden-protocol  = { workspace = true }
miden-standards = { workspace = true }

# Miden dependencies
miden-air       = { workspace = true }
miden-core      = { workspace = true }
miden-crypto    = { workspace = true }
miden-processor = { workspace = true }
miden-prover    = { workspace = true }
miden-verifier  = { workspace = true }

# External dependencies
bincode   = "1.3"
thiserror = { workspace = true }

[dev-dependencies]
anyhow         = { features = ["backtrace", "std"], workspace = true }
assert_matches = { workspace = true }
miden-assembly = { default-features = false, workspace = true }
miden-tx       = { default-features = false, features = ["testing"], path = "." }
rstest         = { workspace = true }
